--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Description of project MonPetitMVC.",
     "authors": [
         {
-            "name": "Nassim",
-            "email": "nassim.ahmedali@gmail.com"
+            "name": "Luke",
+            "email": "lukedussart@hotmail.fr"
         }
     ],
     "require": {
